--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             Commons Attribution-ShareAlike 4.0 International License</a>.
           </p>
           <p>
-            Website template borrowed from <a href="https://github.com/nerfies/nerfies.github.io">NeRFies</a>NeRFies made by Keunhong Park.
+            Website template borrowed from <a href="https://github.com/nerfies/nerfies.github.io">NeRFies</a> made by Keunhong Park.
           </p>
         </div>
       </div>
