--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://github.com/google/nerfies/releases/tag/0.1"
+                <a href="https://drive.google.com/file/d/13PzwBAjyI4VYpCEVye6fU3gGsDvdnrBY/view"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
@@ -104,32 +104,35 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
+
           <p>
-            We present the first method capable of photorealistically reconstructing a non-rigidly
-            deforming scene using photos/videos captured casually from mobile phones.
+            In this study, we want to introduce a novel approach to sentiment analysis
+            by integrating Graph Neural Networks (GNNs), specifically Graph Attention
+            Networks (GAT), with traditional Natural Language Processing (NLP) tech-
+            niques.
           </p>
           <p>
-            Our approach augments neural radiance fields
-            (NeRF) by optimizing an
-            additional continuous volumetric deformation field that warps each observed point into a
-            canonical 5D NeRF.
-            We observe that these NeRF-like deformation fields are prone to local minima, and
-            propose a coarse-to-fine optimization method for coordinate-based models that allows for
-            more robust optimization.
-            By adapting principles from geometry processing and physical simulation to NeRF-like
-            models, we propose an elastic regularization of the deformation field that further
-            improves robustness.
+            By focusing on the challenges of interpreting long-range dependen-
+            cies within text, particularly in the context of social media interactions, we
+            propose a model that leverages the relational and textual information present
+            in data from college SubReddit forums before and during the COVID-19 pan-
+            demic.
           </p>
           <p>
-            We show that <span class="dnerf">Nerfies</span> can turn casually captured selfie
-            photos/videos into deformable NeRF
-            models that allow for photorealistic renderings of the subject from arbitrary
-            viewpoints, which we dub <i>"nerfies"</i>. We evaluate our method by collecting data
-            using a
-            rig with two mobile phones that take time-synchronized photos, yielding train/validation
-            images of the same pose at different viewpoints. We show that our method faithfully
-            reconstructs non-rigidly deforming scenes and reproduces unseen views with high
-            fidelity.
+            Our methodology employs RoBERTa for text em-
+            bedding, followed by a GAT to incorporate the structural relationships be-
+            tween messages, enhancing the sentiment analysis capability beyond the lim-
+            itations of conventional models.
+          </p>
+
+          <p>
+            The results demonstrate a statistically signif-
+            icant improvement in identifying and relating sentiments across distant text
+            parts, underscoring the potential of GNNs in capturing complex interactions
+            within text data. This research contributes to the evolving field of sentiment
+            analysis by showcasing the effectiveness of combining GNNs with existing
+            NLP frameworks, offering insights into the nuanced emotional landscape of
+            digital communications during a global crisis.
           </p>
         </div>
       </div>
