--- a/index.html
+++ b/index.html
@@ -192,7 +192,6 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-      
       @article{park2021nerfies,
         author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
         title     = {Nerfies: Deformable Neural Radiance Fields},
@@ -200,14 +199,12 @@
         year      = {2021},
       }
 
-      <br>
-
       @article{yan2021sentiment,
-      title={Sentiment Analysis and Effect of COVID-19 Pandemic using College SubReddit Data},
-      author={Yan, Tian and Liu, Fang},
-      journal={arXiv preprint arXiv:2112.04351},
-      year={2021}, }
-    
+        author    = {Yan, Tian and Liu, Fang},
+        title     = {Sentiment Analysis and Effect of COVID-19 Pandemic using College SubReddit Data},
+        journal   = {arXiv preprint arXiv:2112.04351},
+        year      = {2021}, 
+      }
     </code></pre>
   </div>
 </section>
