--- a/index.html
+++ b/index.html
@@ -145,11 +145,17 @@
 <section class="section">
   <div class="container is-max-desktop">
 
-    <!-- Animation. -->
+    <!-- Introduction -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Animation</h2>
+        <h2 class="title is-3">Introduction</h2>
 
+        <div class="content has-text-justified">
+          <p>
+            In the dynamic realm of NLP, sentiment analysis stands as a cornerstone for unraveling the intricate emotional fabric of text. However, the traditional models often falter at the complex dance of sentiments in social media's vast expanse. This study introduces a novel confluence of Graph Neural Networks, particularly Graph Attention Networks, with the rich linguistic insights of NLP techniques such as RoBERTa. Centered on the vibrant dialogues within college SubReddit forums amid the COVID-19 period, our method transcends conventional sentiment analysis. It merges NLP's semantic depth with GNN's contextual acumen, aiming to illuminate the nuanced emotional landscape of digital discourse in these unprecedented times.
+          </p>
+        </div>
+          
       </div>
     </div>
 
