--- a/index.html
+++ b/index.html
@@ -166,9 +166,15 @@
       <div class="column is-full-width">
         <h2 class="title is-3">Dataset</h2>
         <div class="content has-text-justified">
-          <p>
-            There's a lot of excellent work that was introduced around the same time as ours.
-          </p>
+            <p>The study delves into social media data sourced from <b>Reddit</b>b>, specifically targeting SubReddits associated with different colleges. The dataset spans two distinct time periods: 2019, representing the pre-pandemic landscape, and 2020, reflecting sentiments amidst the COVID-19 pandemic. Selection criteria were based on a diverse mix of private and public universities, taking into account factors like location size and their approach to in-person learning during the pandemic. </p>
+            <p>The dataset comprises a total of 165,570 messages, encompassing original posts, comments, and their respective replies. Furthermore, a significant subset of the data underwent manual labeling across various sentiment categories, ensuring a balanced and reliable dataset for training and testing machine learning models.</p>
+
+          <div class="column is-3 has-text-centered">
+            <img src="./static/images/data_example.png"
+                 class="interpolation-image"
+                 alt="data_example"/>
+            <p class="is-bold">End Frame</p>
+          </div>
         </div>
       </div>
     </div>
