--- a/index.html
+++ b/index.html
@@ -170,10 +170,7 @@
             <p>The dataset comprises a total of 165,570 messages, encompassing original posts, comments, and their respective replies. Furthermore, a significant subset of the data underwent manual labeling across various sentiment categories, ensuring a balanced and reliable dataset for training and testing machine learning models.</p>
 
           <div class="column is-3 has-text-centered">
-            <img src="./static/images/data_example.png"
-                 class="interpolation-image"
-                 alt="data_example"/>
-            <p class="is-bold">End Frame</p>
+            <img src="./static/images/data_example.png alt="data_example width=500"/>
           </div>
         </div>
       </div>
