--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
           <p>
             In the dynamic realm of NLP, sentiment analysis stands as a cornerstone for unraveling the intricate emotional fabric of text. However, the traditional models often falter at the complex dance of sentiments in social media's vast expanse. This study introduces a novel confluence of Graph Neural Networks, particularly Graph Attention Networks, with the rich linguistic insights of NLP techniques such as RoBERTa. Centered on the vibrant dialogues within college SubReddit forums amid the COVID-19 period, our method transcends conventional sentiment analysis. It merges NLP's semantic depth with GNN's contextual acumen, aiming to illuminate the nuanced emotional landscape of digital discourse in these unprecedented times.
           </p>
+
+          <div class="column is-3 has-text-centered">
+            <img src="./static/images/data_example.png alt="data_example width=500"/>
+          </div>
         </div>
           
       </div>
@@ -166,11 +170,11 @@
       <div class="column is-full-width">
         <h2 class="title is-3">Dataset</h2>
         <div class="content has-text-justified">
-            <p>The study delves into social media data sourced from <b>Reddit</b>b>, specifically targeting SubReddits associated with different colleges. The dataset spans two distinct time periods: 2019, representing the pre-pandemic landscape, and 2020, reflecting sentiments amidst the COVID-19 pandemic. Selection criteria were based on a diverse mix of private and public universities, taking into account factors like location size and their approach to in-person learning during the pandemic. </p>
+            <p>The study delves into social media data sourced from <b>Reddit</b>, specifically targeting SubReddits associated with different colleges. The dataset spans two distinct time periods: 2019, representing the pre-pandemic landscape, and 2020, reflecting sentiments amidst the COVID-19 pandemic. Selection criteria were based on a diverse mix of private and public universities, taking into account factors like location size and their approach to in-person learning during the pandemic. </p>
             <p>The dataset comprises a total of 165,570 messages, encompassing original posts, comments, and their respective replies. Furthermore, a significant subset of the data underwent manual labeling across various sentiment categories, ensuring a balanced and reliable dataset for training and testing machine learning models.</p>
 
           <div class="column is-3 has-text-centered">
-            <img src="./static/images/data_example.png alt="data_example width=500"/>
+            <img src="./static/images/data_example.png" alt="data_example" width="500"/>
           </div>
         </div>
       </div>
@@ -181,7 +185,7 @@
     <!-- Model -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Related Links</h2>
+        <h2 class="title is-3">Model</h2>
         <div class="content has-text-justified">
           <p>
             There's a lot of excellent work that was introduced around the same time as ours.
