--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2011.12948"
+                <a href="https://drive.google.com/file/d/1ugd37HqsdiDJvqK3zuVZIA7QOdoxLofT/view?usp=share_link"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
