--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h1 class="title is-1 publication-title">Graph Neural Networks for Enhancing Sentiment Analysis</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://www.linkedin.com/in/yuxin-guo-63a019204">Yuxin Guo</a>,</span>
+              <a href="https://www.linkedin.com/in/yuxinguo13">Yuxin Guo</a>,</span>
             <span class="author-block">
               <a href="https://www.linkedin.com/in/justin-long-05b940239">Yunfan Long</a>,</span>
             <span class="author-block">
@@ -56,7 +56,18 @@
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- PDF Link. -->
+              <!-- Poster Link. -->
+              <span class="link-block">
+                <a href="https://drive.google.com/file/d/1PFZiuvxoAetJrrP3dk4AXoOxU6-rmyd7/view"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>Poster</span>
+                </a>
+              </span>
+
+              <!-- Report Link. -->
               <span class="link-block">
                 <a href="https://drive.google.com/file/d/1ugd37HqsdiDJvqK3zuVZIA7QOdoxLofT/view?usp=share_link"
                    class="external-link button is-normal is-rounded is-dark">
