--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
             In the dynamic realm of NLP, sentiment analysis stands as a cornerstone for unraveling the intricate emotional fabric of text. However, the traditional models often falter at the complex dance of sentiments in social media's vast expanse. This study introduces a novel confluence of Graph Neural Networks, particularly Graph Attention Networks, with the rich linguistic insights of NLP techniques such as RoBERTa. Centered on the vibrant dialogues within college SubReddit forums amid the COVID-19 period, our method transcends conventional sentiment analysis. It merges NLP's semantic depth with GNN's contextual acumen, aiming to illuminate the nuanced emotional landscape of digital discourse in these unprecedented times.
           </p>
 
-          <div class="column is-3 has-text-centered">
+<!--           <div class="column is-3 has-text-centered">
             <img src="./static/images/process.png" alt="data_example" width="700"/>
-          </div>
+          </div> -->
         </div>
           
       </div>
@@ -184,9 +184,9 @@
             <p>The study analyzes social media data sourced from Reddit, focusing specifically on SubReddits associated with different colleges. This dataset covers two distinct time periods: 2019, representing the pre-pandemic landscape, and 2020, reflecting sentiments amidst the COVID-19 pandemic.</p>
             <p>Selection criteria for the colleges included in the study were based on a variety of factors, such as geographic location, size, and their approach to in-person learning during the pandemic. This ensured a diverse representation of college communities.</p>
             <p>The dataset consists of 165,570 messages, including original posts, comments, and their respective replies. To enhance the reliability of the dataset, a significant subset of the data underwent manual labeling across various sentiment categories. This manual labeling process ensured a balanced and accurately labeled dataset for training and testing machine learning models.</p>
-            <div class="column is-3 has-text-centered">
+<!--             <div class="column is-3 has-text-centered">
             <img src="./static/images/data_example.png" alt="data_example" width="700"/>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
